[project]
name = "eds-plus"
version = "1.0.0"
description = "easy to auto write eds"
authors = [
    {name = "Hotstrip", email = "idiotalex@163.com"},
]
dependencies = [
    "flet>=0.23.0",
    "playwright>=1.44.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
