[project]
name = "eds-plus"
version = "1.0.0"
description = "easy to auto write eds"
authors = [
    {name = "Hotstrip", email = "idiotalex@163.com"},
]
dependencies = [
    "playwright>=1.44.0",
    "pyinstaller>=4.5.1",
    "Pillow>=10.3.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
